--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,401 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Crazybaby</title>
+    <link rel="icon" href="./images/speaker-svgrepo-com.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+
+    <header class="header page__section">
+      <div class="header__nav">
+        <a href="#" class="header__logo">
+          <img
+           class="header__logo-image"
+           src="./images/logo.png" alt="logo">
+        </a>
+        <a href="#menu" class="header__menu">
+          <img
+          class="header__menu-image"
+           src="./images/menu.svg" alt="men">
+        </a>
+        <div class="header__tabdes">
+          <a href="#" class="header__tabdes-title">SPECS</a>
+          <div class="header__tabdes-link">
+            <a
+             class="header__tabdes-link--font"
+             href="#">EN</a>
+            /
+            <a
+             class="header__tabdes-link--font"
+             href="#">UA</a>
+          </div>
+          <a class="header__tabdes-button" href="#">Buy</a>
+        </div>
+      </div>
+      <div class="grid grid--tablet">
+        <div class="grid__item grid__item--desktop-5-12 grid__item--tablet-4-9">
+          <div class="header__photo header__photo-top transform"></div>
+          <!-- <img
+              class="header__photo header__photo-top transform"
+              src="./images/header.png"
+               alt="headerlogo"> -->
+        </div>
+        <div class="grid__item grid__item--desktop-1-4 grid__item--tablet-1-3 grid__row ">
+          <div class="header__flex">
+            <h1 class="header__title">
+              Futuristic
+              <br>
+              Wireless
+              <br>
+              Speaker
+            </h1>
+            <p class="header__paragraf">
+            Luna’s performance is balanced
+            and smooth in all frequency
+            ranges which makes the music
+            both naturally pleasant and
+            distinctly more layered.
+            </p>
+          </div>
+
+
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu slide" id="menu">
+      <div class="container">
+        <a href="#" class="header__menu">
+          <img
+          class="header__menu-imag"
+           src="./images/Vector.svg" alt="menu">
+        </a>
+        <div class="slide__content">
+          <ul class="slide__list">
+            <li class="slide__item">
+              <a href="#ourstory" class="slide__link">OUR STORY</a>
+            </li>
+          </ul>
+          <ul class="slide__list">
+            <li class="slide__item">
+              <a href="#ourstory" class="slide__link">ABOUT US</a>
+            </li>
+          </ul>
+          <ul class="slide__list">
+            <li class="slide__item">
+              <a href="#technology" class="slide__link">TECHNOLOGY</a>
+            </li>
+          </ul>
+          <ul class="slide__list">
+            <li class="slide__item">
+              <a href="#features" class="slide__link">FEATURES</a>
+            </li>
+          </ul>
+          <ul class="slide__list">
+            <li class="slide__item">
+              <a href="#get-in-touch" class="slide__link">GET IN TOUCH</a>
+            </li>
+          </ul>
+          <div class="slide__button">
+            <a href="#" class="slide__button-title">SPECS</a>
+            <div class="slide__button-lg">
+              <a
+               class="slide__button-lg--font"
+               href="#">EN</a>
+              /
+              <a
+               class="slide__button-lg--font"
+               href="#">UA</a>
+            </div>
+            <a class="slide__button-lg--but" href="#">Buy</a>
+          </div>
+        </div>
+
+      </div>
+    </nav>
+
+
+    <section class="page__section-info">
+      <div class="menu">
+        <div class="menu__container">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#ourstory" class="menu__link">OUR STORY</a>
+            </li>
+            <li class="menu__item">
+              <a href="#ourstory" class="menu__link">ABOUT US</a>
+            </li>
+            <li class="menu__item">
+              <a href="#technology" class="menu__link">TECHNOLOGY</a>
+            </li>
+            <li class="menu__item">
+              <a href="#features" class="menu__link">FEATURES</a>
+            </li>
+            <li class="menu__item">
+              <a href="#get-in-touch" class="menu__link">GET IN TOUCH</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section-benefits benefits">
+      <div class="benefits__container">
+        <img
+        class="benefits__icon"
+        src="./images/b1.svg" alt="b1">
+        <h4 class="benefits__title benefits__title--bot">Futuristic <br class="benefits__title--br">Design</h4>
+        <p class="benefits__paragraf">To give Luna a truly flawless look, we specifically picked aircraft grade aluminum as its material and adopted both three-dimensional stretch-bending technology and a high precision cold forging technique.</p>
+      </div>
+      <div class="benefits__container">
+        <img
+        class="benefits__icon"
+        src="./images/b2.svg" alt="b1">
+        <h4 class="benefits__title">Tweeter Speaker <br class="benefits__title--br"> System</h4>
+        <p class="benefits__paragraf">To deliver a more layered sound performance better than a sole full-range speaker, our team equipped Luna with one more tweeter speaker responsible for high-frequency sound independently.</p>
+      </div>
+      <div class="benefits__container">
+        <img
+        class="benefits__icon"
+        src="./images/b3.svg" alt="b1">
+        <h4 class="benefits__title benefits__title--bot">Multiroom <br class="benefits__title--br">System  </h4>
+        <p class="benefits__paragraf">Luna is natively compatible with your home Wi-Fi. Set up multiple speakers in different rooms to expand your music experience into the entire house.  </p>
+      </div>
+      <div class="benefits__container">
+        <img
+        class="benefits__icon"
+        src="./images/b4.svg" alt="b1">
+        <h4 class="benefits__title">Intuitive Lighting <br class="benefits__title--br"> System</h4>
+        <p class="benefits__paragraf">An intuitive user interface allows you to adjust the hue and saturation of color for lighting that fits any mood and situation.</p>
+      </div>
+
+
+    </section>
+
+
+    <section class="page__section--about ">
+      <div>
+        <img
+        class="about-us__photo transform"
+        src="./images/benefit.png" alt="benefit">
+      </div>
+      <div class="about-us" id="ourstory">
+        <div class="grid">
+          <div class="grid__item  grid__item--desktop-1-6 grid__item--tablet-1-4 ">
+            <img
+            class="about-us--image transform"
+            src="./images/designeTable.png" alt="designe">
+          </div>
+          <div class="grid__item about-us__info  grid__item--desktop-7-12 grid__item--tablet-5-8">
+            <h2 class="about-us__title">DESIGNED FOR THE FUTURE</h2>
+            <p class="about-us__text">In 2014, a group of geeky industrial designers, engineering veterans and acoustic experts formed crazybaby. This is a bunch of passionate people who are crazy enough to think they can challenge the industry with disruptive audio products.</p>
+            <a
+                href="http://crazybaby.com/#"
+                class="about-us__link"
+                target="_blank"
+              >
+                See more about us
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <section class="page__section--about2">
+      <div class="about-us" id="technology">
+        <div class="grid">
+          <div class="grid__item  grid__item--desktop-7-12 grid__item--tablet-5-8 grid__row">
+            <img
+            class="about-us--image transform"
+            src="./images/luna.png" alt="designe">
+          </div>
+          <div class="grid__item about-us__info  grid__item--desktop-1-6 grid__item--tablet-1-4">
+            <h2 class="about-us__title">Luna Eye</h2>
+            <p class="about-us__text">Luna Eye is to the essence of this innovative light and audio system. It comprises an independent tweeter speaker, a light guiding component, a dome and a ring ornament.</p>
+            <a
+                href="http://crazybaby.com/#"
+                class="about-us__link"
+                target="_blank"
+              >
+                See more about us
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <section class="page__section--man">
+      <div class="grid">
+        <div class=" man_ph grid__item man grid__item--desktop-3-10 grid__item--tablet-1-8 ">
+          <p class="man__title">It really took me by surprise honestly to have such full beautiful sound that coming out of this small compact device. And with the brush aluminum surface, it feels so familiar. Like my iPhone.</p>
+          <img
+          class="man__photo transform"
+          src="./images/man.png" alt="man">
+          <h5 class="man__name">Garrett Martin</h5>
+          <p class="man__info">Creative Director</p>
+        </div>
+      </div>
+    </section>
+    <section class="page__section--features" id="features">
+      <h2 class="features__headline">FEATURES</h2>
+      <div class="grid features">
+
+        <div class="features__info features__delete  grid__item grid__item--desktop-2-5">
+          <h3 class="features__title">Connectivity</h3>
+          <ul class="features__list">
+            <li class="features__item">Hands Free Wireless Audio</li>
+            <li class="features__item">Bluetooth 4.0 LE</li>
+            <li class="features__item">Wi-Fi 2.4 GHz (802.11 b/g/n)</li>
+            <li class="features__item">Smart Multiroom System Set Up</li>
+            <li class="features__item">Party Mode with 6.0 Units and above</li>
+            <li class="features__item">MESHNET Multi Speaker Network</li>
+          </ul>
+        </div>
+        <div class="features__info features__delete  grid__item grid__item--desktop-7-10">
+          <h3 class="features__title">App Features</h3>
+          <ul class="features__list">
+            <li class="features__item">Customize Music Schedule</li>
+            <li class="features__item">Wake Up with Favorite Songs</li>
+            <li class="features__item">Home Detection Auto Wake Up</li>
+            <li class="features__item">Color Wheel</li>
+          </ul>
+        </div>
+
+
+        <div class="features__info features__info-top   grid__item grid__item--desktop-2-5 grid__item--tablet-1-9">
+          <h3 class="features__title">Sound & Music</h3>
+          <ul class="features__list">
+            <li class="features__item">Feel-in-chest Base Power</li>
+            <li class="features__item">Lossless Digital Audio Transmission</li>
+            <li class="features__item">Easy & Stable Stereo Pairing</li>
+            <li class="features__item">Crisp and Clear High Frequency Sound</li>
+            <li class="features__item">Streams from Cloud Music and Local Library</li>
+            <li class="features__item">Auto Music from Last Song Stopped</li>
+          </ul>
+        </div>
+
+        <img
+        src="./images/speaker.png"
+        alt="luna"
+        class="features__img  grid__item grid__item--desktop-6-12 grid__item--tablet-4-9"
+      >
+        <img
+        src="./images/line.svg"
+        alt="line"
+        class="features__img-line grid__item grid__item--tablet-1-3"
+        >
+      </div>
+
+
+    </section>
+
+    <section class="page__section--question" id="get-in-touch">
+      <div class="grid question">
+        <div class="question__info grid__item grid__item--desktop-1-6 grid__item--tablet-1-4">
+          <h2 class="question__text">do you have any questions?</h2>
+        </div>
+        <form
+        action="#"
+          class="question__form grid__item grid__item--desktop-7-12 grid__item--tablet-5-8 form">
+          <input
+            type="email"
+            name="email"
+            placeholder="Your email"
+            class="form form__email "
+            required
+          >
+          <textarea
+            name="textarea"
+            class="form form__textarea"
+            placeholder="Your message..."
+            required
+           ></textarea>
+          <div class="form__button">
+            <button class=" form__button-send">send</button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__container grid">
+        <div class="
+        footer__logo
+        grid__item--desktop-6-7
+        grid__item--tablet-4-6"
+        >
+          <a href="#">
+            <img
+            src="./images/logo.png"
+            alt="icon"
+            class="icon icon__logo"
+          >
+          </a>
+        </div>
+        <a href="#"
+        class="
+        footer__arrow
+        transform
+        grid__item--desktop-12-12
+        grid__item--tablet-8-8"
+        ></a>
+        <div class="
+        footer__network
+        grid__item--desktop-5-8
+        grid__item--tablet-4-6">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/Kickstarter/"
+            class="footer__network-www"
+          >
+            <img
+              src="./images/facebook.svg"
+              alt="facebook"
+              class="footer__network-image"
+            >
+          </a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/kickstarter/"
+            class="footer__network-www"
+          >
+            <img
+              src="./images/instagram.svg"
+              alt="instagram"
+              class="footer__network-image"
+            >
+          </a>
+          <a
+            target="_blank"
+            href="https://twitter.com/kickstarter"
+            class="footer__network-www"
+          >
+            <img
+              src="./images/twitter.svg"
+              alt="twitter"
+              class="footer__network-image"
+            >
+          </a>
+        </div>
+        <p class="
+        footer__text
+        grid__item--desktop-4-9
+        grid__item--tablet-3-7">
+          © 2019 All rights reserved. Terms of Use & Privacy Policy
+        </p>
+      </div>
+    </footer>
+
+
+
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
